# Perseus-Boilerplate

./: .gitignore  Cargo.toml  README.md
src/: error_pages.rs  global_state.rs  lib.rs
src/components/: mod.rs  nav.rs
src/templates/: about.rs  add_book.rs  book_list.rs  index.rs  locations.rs  mod.rs  testpage.rs
static/: normalize.css  skeleton.css  styles.css  test.txt
