[package]
name = "perseus-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perseus = { version = "0.3.6", features = [ "hydrate" ] }
sycamore = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version= "2", features = ["json"]}
# reqwest not working for now reqwest = { version = "0.10.10", features = ["json", "blocking"] }

